// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots PrettyThings/Button Default 1`] = `
<button
  className=" hover:bg-blue-600 bg-blue-500 hover:text-blue-100 h-10 mt-6 md:mt-0 transition border font-bold rounded-lg px-8 text-white "
  disabled={false}
  type="submit"
>
  Default Button
</button>
`;

exports[`Storyshots PrettyThings/Button Ghost 1`] = `
<button
  className="h-10 mt-6 md:mt-0 transition border font-bold rounded-lg px-8 text-white  border-0 text-blue-500 hover:text-blue-900 hover:bg-blue-200 "
  disabled={false}
  type="submit"
>
  Ghost Button
</button>
`;

exports[`Storyshots PrettyThings/Button Outline 1`] = `
<button
  className="border-blue-500 hover:bg-blue-600 hover:text-blue-100 text-blue-500 h-10 mt-6 md:mt-0 transition border font-bold rounded-lg px-8 text-white "
  disabled={false}
  type="submit"
>
  Outline Button
</button>
`;
